fix: grid.sass, interface.sass

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -3,6 +3,7 @@
   border: none
   border-radius: 2px
   text-transform: uppercase
+  
   &--primary
-    background-color: $primary
+    background-color: #000
     color: $light
