--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'Futura Book';
-  src: url("../fonts/Futura/FuturaBookC.woff") format("woff"), url(".ontsuturauturaBookC.woff2") format("woff");
+  src: url("../fonts/Futura/FuturaBookC.woff") format("woff"), url("../fonts/Futura/FuturaBookC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'Futura Demi';
-  src: url("..ontsuturauturaDemiC.woff") format("woff"), url("..ontsuturauturaDemiC.woff2") format("woff");
+  src: url("../fonts/Futura/FuturaDemiC.woff") format("woff"), url("../fonts/Futura/FuturaDemiC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap; }
@@ -356,6 +356,32 @@ template {
 .contacts__phone {
   margin-right: 45px;
   font-weight: 500; }
+
+.hero {
+  position: relative;
+  background: #131313 url("../img/hero-bg.jpg") no-repeat center/cover;
+  color: #ffffff;
+  height: 100vh; }
+  .hero__instagram {
+    position: absolute;
+    left: 0;
+    top: 0;
+    max-width: 80px;
+    height: 100vh; }
+
+.instagram {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #131313; }
+  .instagram__link {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #E3B873;
+    transform: rotate(90deg); }
+
+.title {
+  margin: 0; }
 
 body {
   font-family: 'Futura Book', sans-serif;
