--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -7,3 +7,8 @@
   &--primary
     background-color: $primary
     color: $light
+
+  &--outline
+    border: 1px solid $light
+    background-color: transparent
+    color: $light
