--- a/src/css/style.css
+++ b/src/css/style.css
@@ -328,14 +328,18 @@ template {
   .button--primary {
     background-color: #E3B873;
     color: #ffffff;
-    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.6);
     transition: box-shadow 0.3s; }
     .button--primary:hover {
       box-shadow: none; }
   .button--outline {
     border: 1px solid #ffffff;
     background-color: transparent;
-    color: #ffffff; }
+    color: #ffffff;
+    box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.6);
+    transition: box-shadow 0.3s; }
+    .button--outline:hover {
+      box-shadow: none; }
 
 .container {
   width: 85%;
