--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -9,7 +9,7 @@
   &--primary
     background-color: $primary
     color: $light
-    box-shadow: 0px 5px 15px rgba($primary, 0.2)
+    box-shadow: 0px 5px 15px rgba($primary, 0.6)
     transition: box-shadow 0.3s
     &:hover
       box-shadow: none
@@ -18,3 +18,7 @@
     border: 1px solid $light
     background-color: transparent
     color: $light
+    box-shadow: 0px 5px 15px rgba($light, 0.6)
+    transition: box-shadow 0.3s
+    &:hover
+      box-shadow: none
