--- a/src/css/style.css
+++ b/src/css/style.css
@@ -336,10 +336,10 @@ template {
     border: 1px solid #ffffff;
     background-color: transparent;
     color: #ffffff;
-    box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.6);
+    box-shadow: none;
     transition: box-shadow 0.3s; }
     .button--outline:hover {
-      box-shadow: none; }
+      box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.6); }
 
 .container {
   width: 85%;
