--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -19,10 +19,11 @@
 
   &__content
     position: relative
-    max-width: 670px
+    max-width: 47.85rem
+    margin-left: 4.28rem
 
   &__text
-    font-size: 22px
+    font-size: 1.57rem
     max-width: 500px
 
   &__button
@@ -43,8 +44,8 @@
     align-items: center
     left: 0
     bottom: 0
-    min-width: 247px
-    min-height: 97px
+    min-width: 17.6rem
+    min-height: 6.92rem
     background-color: $dark
     text-transform: uppercase
     color: $light
@@ -84,7 +85,7 @@
   margin: 0
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase
-  font-size: 40px
+  font-size: 2.857rem
 
   &--primary
     color: $primary
