--- a/src/css/style.css
+++ b/src/css/style.css
@@ -319,7 +319,7 @@ template {
   display: none; }
 
 .button {
-  padding: 20px 13px;
+  padding: 11px 24px;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
@@ -428,11 +428,17 @@ body {
     position: relative;
     max-width: 47.85rem;
     margin-left: 4.28rem; }
+  .hero__title {
+    margin-bottom: 1rem; }
   .hero__text {
     font-size: 1.57rem;
-    max-width: 500px; }
+    line-height: 131%;
+    max-width: 500px;
+    margin: 0;
+    margin-bottom: 3rem; }
   .hero__button {
-    margin-right: 20px; }
+    margin-right: 20px;
+    padding: 20px 30px; }
   .hero__instagram {
     position: absolute;
     left: 0;
@@ -473,7 +479,8 @@ body {
     text-decoration: none;
     color: #E3B873;
     transform: rotate(90deg);
-    line-height: 0.8; }
+    line-height: 0.8;
+    font-size: 1.1rem; }
     .instagram__link::after {
       content: '';
       width: 50px;
@@ -485,7 +492,8 @@ body {
   margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 2.857rem; }
+  font-size: 2.857rem;
+  line-height: 1.4; }
   .title--primary {
     color: #E3B873; }
 
