--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -22,12 +22,20 @@
     max-width: 47.85rem
     margin-left: 4.28rem
 
+  &__title
+    margin-bottom: 1rem
+
   &__text
     font-size: 1.57rem
+    line-height: 131%
     max-width: 500px
+    margin: 0
+    margin-bottom: 3rem
 
   &__button
     margin-right: 20px
+    padding: 20px 30px
+
 
   &__instagram
     position: absolute
@@ -74,6 +82,7 @@
     color: $primary
     transform: rotate(90deg)
     line-height: 0.8
+    font-size: 1.1rem
     &::after
       content: ''
       width: 50px
@@ -86,6 +95,7 @@
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase
   font-size: 2.857rem
+  line-height: 1.4
 
   &--primary
     color: $primary
