--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -11,6 +11,8 @@
   display: flex
   justify-content: space-between
   align-items: center
+  &__logo
+    font-family: 'Futura Demi', sans-serif
 
 .logo
   color: $primary
