--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -52,12 +52,13 @@
     align-items: center
     left: 0
     bottom: 0
-    min-width: 17.6rem
+    min-width: 17.6428rem
     min-height: 6.92rem
     background-color: $dark
     text-transform: uppercase
     color: $light
     text-decoration: none
+    font-family: 'Yeseva One', cursive;
     &::after
       content: ''
       background: url('../img/arrow-down.svg') no-repeat center
@@ -73,6 +74,7 @@
   justify-content: center
   align-items: center
   background-color: $dark
+  font-family: 'Futura Demi', sans-serif
 
   &__link
     display: flex
