--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -10,7 +10,7 @@
   &--primary
     background-color: $primary
     color: $light
-    box-shadow: 0px 5px 15px rgba($primary, 0.6)
+    box-shadow: 0px 5px 15px rgba($primary, 0.3)
     transition: box-shadow 0.3s
     &:hover
       box-shadow: none
@@ -23,4 +23,10 @@
     transition: box-shadow 0.3s
     &:hover
       
-      box-shadow: 0px 5px 15px rgba($light, 0.6)
+      box-shadow: 0px 5px 15px rgba($light, 0.3)
+
+.hero__button, .contacts__button
+  font-family: 'Futura Demi', sans-serif
+  
+.hero__button
+  min-width: 14.78571428571429rem
