fix: margins, width, paddings in _hero.sass

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -338,15 +338,12 @@ template {
     background-color: transparent;
     color: #ffffff;
     box-shadow: none;
-    transition: box-shadow 0.3s; }
+    min-width: 14.8rem; }
     .button--outline:hover {
       box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.3); }
 
 .hero__button, .contacts__button {
   font-family: 'Futura Demi', sans-serif; }
-
-.hero__button {
-  min-width: 14.78571428571429rem; }
 
 .container {
   width: 85%;
@@ -443,10 +440,10 @@ body {
     line-height: 131%;
     max-width: 500px;
     margin: 0;
-    margin-bottom: 3rem; }
+    margin-bottom: 3.4rem; }
   .hero__button {
     margin-right: 20px;
-    padding: 20px 30px; }
+    padding: 20px 26px; }
   .hero__instagram {
     position: absolute;
     left: 0;
@@ -503,17 +500,20 @@ body {
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
   font-size: 2.857rem;
-  line-height: 1.4; }
+  line-height: 1.4;
+  margin-bottom: 0.9rem; }
   .title--primary {
     color: #E3B873; }
 
-@media screen and (max-width: 1252px) {
+@media screen and (max-width: 1270px) {
   html {
     font-size: 12px; }
-  nav__item {
-    margin-right: 1rem; } }
+  .nav__item {
+    margin-right: 1rem; }
+  .hero__title {
+    max-width: 31rem; } }
 
-@media screen and (max-width: 1089px) {
+@media screen and (max-width: 991px) {
   .nav {
     display: none; }
   .hero__instagram {
@@ -529,7 +529,8 @@ body {
   .contacts__button {
     display: none; }
   .title {
-    font-size: 1.64rem; }
+    font-size: 1.64rem;
+    margin-bottom: 1.14rem; }
   .hero__scroll-down {
     display: none; }
   .hero__content {
