--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,12 +1,16 @@
-@media screen and ( max-width:  1252px)
+@media screen and ( max-width:  1270px)
   html
     font-size: 12px
-  nav
+  .nav
     &__item
       margin-right: 1rem
 
+  .hero
+    &__title
+      max-width: 31rem
 
-@media screen and ( max-width:  1089px)
+
+@media screen and ( max-width:  991px)
   .nav
     display: none
   .hero
@@ -25,6 +29,7 @@
       display: none
   .title
     font-size: 1.64rem
+    margin-bottom: 1.14rem
   .hero
     &__scroll-down
       display: none
