--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -13,6 +13,7 @@
   align-items: center
   &__logo
     font-family: 'Futura Demi', sans-serif
+    font-size: 1rem
 
 .logo
   color: $primary
@@ -25,6 +26,7 @@
     text-transform: uppercase
     margin-right: 2.85rem
     transition: color 0.2s
+    font-size: 1rem
     &:hover
       color: $primary
     
@@ -34,5 +36,5 @@
 
 .contacts
   &__phone
-    margin-right: 45px
+    margin-right: 3.21rem
     font-weight: 500
