--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -1,6 +1,5 @@
 *, *:before, *:after
   box-sizing: border-box
-
   
 html 
   font-size: 14px
@@ -9,11 +8,17 @@ body
   font-family: 'Futura Book', sans-serif
   font-size: 1rem
 
+img 
+  max-width: 100%
+
 .section
   &-title
     text-align: center
     text-transform: uppercase
     font-family: 'Yeseva One', cursive
+    font-style: normal
+    font-weight: normal
+    font-size: 20px
     &__image
       display: flex
       align-items: center
