--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -4,7 +4,7 @@
   flex-direction: column
   justify-content: center
   align-items: flex-start
-  padding-top: 100px
+  padding-top: 83px
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   color: $light
   height: 100vh
@@ -20,30 +20,32 @@
   &__content
     position: relative
     max-width: 47.85rem
-    margin-left: 4.28rem
+    margin-left: 2.4rem
 
   &__title
     margin-bottom: 1rem
 
   &__text
     font-size: 1.57rem
-    line-height: 131%
-    max-width: 500px
-    margin: 0
-    margin-bottom: 3.4rem
+    max-width: 36rem
+    line-height: 2.15rem
+    margin-bottom: 3.2rem
 
-  &__button
-    margin-right: 20px
-    padding: 20px 26px
+  .button--primary
+    margin-right: 15px
+    padding: 18px 25px
+
+  .button--outline
+    padding: 18px 43px
 
 
   &__instagram
     position: absolute
     left: 0
     top: 0
-
-    max-width: 80px
-    height: 100vh
+    max-width: 5.85rem
+    height: 100%
+    font-family: "Futura DemiC", sans-serif
 
   &__scroll-down
     position: absolute
@@ -56,18 +58,29 @@
     min-height: 6.92rem
     background-color: $dark
     font-size: 0.85rem
+    line-height: 138.6%
     text-transform: uppercase
     color: $light
     text-decoration: none
-    font-family: 'Yeseva One', cursive;
+    font-family: 'Yeseva One', cursive
+    &:hover::before 
+      content: ''
+      display: flex
+      position: absolute
+      margin-top: 8px
+      margin-right: 100px
+      transform: translateX(-24px)
+      background-color: #E3B873
+      width: 105px
+      height: 1px
     &::after
       content: ''
       background: url('../img/arrow-down.svg') no-repeat center
-      width: 30px
-      height: 30px
+      width: 29px
+      height: 29px
       border: 2px solid $primary
       border-radius: 50%
-      margin-left: 12px
+      margin-left: 19px
       
 
 .instagram
@@ -75,8 +88,6 @@
   justify-content: center
   align-items: center
   background-color: $dark
-  font-family: 'Futura Demi', sans-serif
-
   &__link
     display: flex
     align-items: center
@@ -86,20 +97,27 @@
     transform: rotate(90deg)
     line-height: 0.8
     font-size: 1rem
+    transition: color 0.2s
+    &:hover 
+      color: $light
+      &::after
+        background-color: $light
     &::after
       content: ''
-      width: 50px
-      height: 1px
+      width: 51px
+      height: 2px
+      border-radius: 2px
       background-color: $primary
-      margin-left: 8px
+      margin-left: 13px
 
 .title
   margin: 0
-  font-family: 'Yeseva One', cursive;
+  font-family: 'Yeseva One', cursive
   text-transform: uppercase
-  font-size: 2.857rem
-  line-height: 1.4
+  font-size: 2.85rem
+  font-style: normal
+  font-weight: normal
+  line-height: 3.85rem
   margin-bottom: 0.9rem
-
   &--primary
     color: $primary
