--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,34 +1,39 @@
 .button
-  padding: 11px 24px
+  /*padding: 11px 24px*/
+  font-family: 'Futura Demi', sans-serif
   border: none
-  border-radius: 2px
+  border-radius: 0.14rem
   text-transform: uppercase
+  cursor: pointer
+  box-shadow: none
+  transition: 0.2s
   font-size: 0.93rem
-  white-space: normal
-  &:hover
-    cursor: pointer
+  font-weight: 600
+  line-height: 1.07rem
   
   &--primary
     background-color: $primary
+    border: 0.07rem solid $primary;
     color: $light
-    box-shadow: 0px 5px 15px rgba($primary, 0.3)
+    box-shadow: 0rem 0.35rem 1.07rem rgba($primary, 0.3)
     transition: box-shadow 0.3s
-    
     &:hover
-      box-shadow: none
+      border: 0.07rem solid $light
+      box-shadow: 0rem 0.35rem 1.07rem rgba($light, 0.2)
+      background-color: rgba($light, 0.2)
 
   &--outline
-    border: 1px solid $light
     background-color: transparent
+    border: 0.07rem solid $light
     color: $light
-    box-shadow: none
-    min-width: 14.8rem
+    /*min-width: 14.8rem*/
     
     &:hover
-      box-shadow: 0px 5px 15px rgba($light, 0.3)
+      box-shadow: 0rem 0.35rem 1.07rem rgba($light, 0.3)
+      background-color: rgba($light, 0.3)
 
-.hero__button, .contacts__button
-  font-family: 'Futura Demi', sans-serif
+/*.hero__button, .contacts__button
+  font-family: 'Futura Demi', sans-serif*/
   
 
   
