--- a/src/css/style.css
+++ b/src/css/style.css
@@ -557,6 +557,23 @@ img {
   .title--primary {
     color: #E3B873; }
 
+.row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between; }
+
+.col {
+  flex-basis: 32%; }
+
+.card__text {
+  position: relative;
+  max-width: 23.6rem;
+  margin: 0 auto;
+  margin-top: -10.5rem;
+  padding: 1.79rem 2.14rem;
+  background-color: #fff;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
+
 @media screen and (max-width: 1320px) {
   .nav__item {
     margin-right: 2rem; }
