--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -49,6 +49,16 @@
     &__button
       display: none
           
+@media screen and ( max-width: 570px )
+  .row
+    flex-direction: column
+    align-items: center
+  .types
+    &__card
+      margin-bottom: 5rem
+  .card
+    &__text
+      margin-left: 0
 
 @media screen and ( max-width: 500px )
   .container
