--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -45,7 +45,7 @@
     top: 0
     max-width: 5.85rem
     height: 100%
-    font-family: "Futura DemiC", sans-serif
+    font-family: "Futura Demi", sans-serif
     font-weight: 600
 
   &__scroll-down
