--- a/src/css/style.css
+++ b/src/css/style.css
@@ -604,6 +604,61 @@ img {
   color: #ffffff;
   padding: 1.214rem 2.6rem; }
 
+.design__section-title {
+  margin-bottom: 2rem; }
+
+.design__text {
+  font-family: "Futura Book", sans-serif;
+  font-size: 1.43rem;
+  line-height: 1.93rem;
+  font-style: normal;
+  font-weight: normal;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 67.14rem; }
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between; }
+
+.col {
+  flex-basis: 32%; }
+
+.card__text {
+  position: relative;
+  max-width: 23.6rem;
+  margin: 0 auto;
+  margin-top: -9.3rem;
+  padding: 1.79rem 2.14rem;
+  background-color: #fff;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
+
+.card__title {
+  font-family: 'Yeseva One', cursive;
+  font-size: 1.29rem;
+  margin-top: 0;
+  margin-bottom: 0.7rem; }
+
+.card__list {
+  padding: 0 0 0 1rem;
+  margin: 0;
+  font-size: 1.07rem;
+  line-height: 1.79rem;
+  color: #959595;
+  margin-bottom: 2.5rem; }
+
+.card__pricetag {
+  position: absolute;
+  left: 0;
+  bottom: -1.79rem;
+  font-size: 1.29rem;
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase;
+  background-color: #E3B873;
+  color: #ffffff;
+  padding: 1.214rem 2.6rem; }
+
 @media screen and (max-width: 1320px) {
   .nav__item {
     margin-right: 2rem; }
@@ -649,6 +704,12 @@ img {
     display: none; } }
 
 @media screen and (max-width: 570px) {
+  .design {
+    background-color: #131313; }
+    .design__text {
+      color: #ffffff; }
+  .section-title__heading {
+    color: #ffffff; }
   .row {
     flex-direction: column;
     align-items: center; }
