--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -50,6 +50,12 @@
       display: none
           
 @media screen and ( max-width: 570px )
+  .design
+    background-color: $dark
+    &__text
+      color: $light
+  .section-title__heading
+    color: $light
   .row
     flex-direction: column
     align-items: center
@@ -59,6 +65,7 @@
   .card
     &__text
       margin-left: 0
+
 
 @media screen and ( max-width: 500px )
   .container
