--- a/src/css/style.css
+++ b/src/css/style.css
@@ -319,7 +319,6 @@ template {
   display: none; }
 
 .button {
-  /*padding: 11px 24px*/
   font-family: 'Futura Demi', sans-serif;
   border: none;
   border-radius: 0.14rem;
@@ -377,7 +376,9 @@ img {
     font-family: 'Yeseva One', cursive;
     font-style: normal;
     font-weight: normal;
-    font-size: 20px; }
+    line-height: 2rem; }
+    .section-title__heading {
+      margin-bottom: 13px; }
     .section-title__image {
       display: flex;
       align-items: center;
@@ -583,7 +584,8 @@ img {
   font-family: 'Yeseva One', cursive;
   font-size: 1.29rem;
   margin-top: 0;
-  margin-bottom: 0.7rem; }
+  margin-bottom: 0.7rem;
+  line-height: 1.8rem; }
 
 .card__list {
   padding: 0 0 0 1rem;
@@ -605,59 +607,19 @@ img {
   padding: 1.214rem 2.6rem; }
 
 .design__section-title {
-  margin-bottom: 2rem; }
+  margin-bottom: 2.85rem; }
 
-.design__text {
+.design__subtitle {
   font-family: "Futura Book", sans-serif;
   font-size: 1.43rem;
   line-height: 1.93rem;
   font-style: normal;
   font-weight: normal;
+  margin-top: 1.71rem;
   margin-left: auto;
   margin-right: auto;
-  max-width: 67.14rem; }
-
-.row {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between; }
-
-.col {
-  flex-basis: 32%; }
-
-.card__text {
-  position: relative;
-  max-width: 23.6rem;
-  margin: 0 auto;
-  margin-top: -9.3rem;
-  padding: 1.79rem 2.14rem;
-  background-color: #fff;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
-
-.card__title {
-  font-family: 'Yeseva One', cursive;
-  font-size: 1.29rem;
-  margin-top: 0;
-  margin-bottom: 0.7rem; }
-
-.card__list {
-  padding: 0 0 0 1rem;
-  margin: 0;
-  font-size: 1.07rem;
-  line-height: 1.79rem;
-  color: #959595;
-  margin-bottom: 2.5rem; }
-
-.card__pricetag {
-  position: absolute;
-  left: 0;
-  bottom: -1.79rem;
-  font-size: 1.29rem;
-  font-family: 'Yeseva One', cursive;
-  text-transform: uppercase;
-  background-color: #E3B873;
-  color: #ffffff;
-  padding: 1.214rem 2.6rem; }
+  max-width: 54.3rem;
+  text-transform: none; }
 
 @media screen and (max-width: 1320px) {
   .nav__item {
@@ -687,7 +649,14 @@ img {
   .hero__scroll-down {
     display: none; }
   .hero__content {
-    margin-left: 0rem; } }
+    margin-left: 0rem; }
+  .row {
+    flex-direction: column;
+    align-items: center; }
+  .types__card {
+    margin-bottom: 5rem; }
+  .card__text {
+    margin-left: 0; } }
 
 @media screen and (max-width: 576px) {
   .hero__text {
@@ -703,21 +672,6 @@ img {
   .contacts__button {
     display: none; } }
 
-@media screen and (max-width: 570px) {
-  .design {
-    background-color: #131313; }
-    .design__text {
-      color: #ffffff; }
-  .section-title__heading {
-    color: #ffffff; }
-  .row {
-    flex-direction: column;
-    align-items: center; }
-  .types__card {
-    margin-bottom: 5rem; }
-  .card__text {
-    margin-left: 0; } }
-
 @media screen and (max-width: 500px) {
   .container {
     width: 90%; }
@@ -731,7 +685,13 @@ img {
   .hero__button {
     font-size: 13px; }
   .contacts__phone {
-    text-decoration: none; } }
+    text-decoration: none; }
+  .design {
+    background-color: #131313; }
+    .design__section-title {
+      color: #ffffff; }
+    .design__subtitle {
+      max-width: 347px; } }
 
 @media screen and (max-height: 530px) {
   .hero__scroll-down {
