--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -18,8 +18,10 @@ img
     text-transform: uppercase
     font-family: 'Yeseva One', cursive
     font-style: normal
-    font-weight: normal
-    font-size: 20px
+    font-weight: normal 
+    line-height: 2rem
+    &__heading
+      margin-bottom: 13px  
     &__image
       display: flex
       align-items: center
