--- a/src/sass/templates/_types.sass
+++ b/src/sass/templates/_types.sass
@@ -22,6 +22,7 @@
     font-size: 1.29rem
     margin-top: 0
     margin-bottom: 0.7rem
+    line-height: 1.8rem
 
   &__list
     padding: 0 0 0 1rem
