--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -31,9 +31,37 @@
       box-shadow: 0rem 0.35rem 1.07rem rgba($light, 0.3)
       background-color: rgba($light, 0.3)
 
-/*.hero__button, .contacts__button
-  font-family: 'Futura Demi', sans-serif*/
-  
-
+.label
+  font-size: 1.07rem
+  &--light
+    color: rgba($light, 0.5)
+.input 
+  background-color: transparent
+  border: none
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+  font-size: 1.285rem
+  color: $light
+  padding: 0.5rem 0
+  &::placeholder
+    color: $light
+.policy
+  &__checkbox
+    opacity: 0
+    visibility: hidden
+    &:checked + 
+      .policy__label
+        &::before
+          background: $primary url('../img/check.svg') no-repeat center / 0.8rem   
+  &__label
+    display: flex
+    align-items: center
+    &::before
+     content: ''
+     width: 18px
+     height: 18px
+     border: 1px solid $primary 
+     border-radius: 1px
+     cursor: pointer  
+     margin-right: 0.64rem
   
   
