--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -21,6 +21,7 @@ img
     font-weight: normal 
     line-height: 2rem
     &__heading
+      font-weight: normal
       margin-bottom: 13px  
     &__image
       display: flex
