fix: section title heading

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -772,6 +772,8 @@ img {
 @media screen and (max-width: 500px) {
   .container {
     width: 90%; }
+  h2.section-title__heading {
+    font-size: 1.8rem; }
   .title {
     margin-top: 3px;
     font-size: 23px;
