--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -63,6 +63,8 @@
 @media screen and ( max-width: 500px )
   .container
     width: 90%
+  h2.section-title__heading
+    font-size: 1.8rem
   .title
     margin-top: 3px
     font-size: 23px
