--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -36,6 +36,8 @@
   .card
     &__text
       margin-left: auto
+    &__design
+      margin-bottom: 6.5rem
 
 @media screen and ( max-width: 768px)
   .hero
@@ -64,7 +66,7 @@
   .container
     width: 90%
   h2.section-title__heading
-    font-size: 1.8rem
+    font-size: 1.85rem
   .title
     margin-top: 3px
     font-size: 23px
@@ -87,8 +89,11 @@
     &__subtitle
       max-width: 347px
   .card
-    &__text
+    &__design
+      max-width: 22.4rem
+      margin-top: -12rem
       margin-left: 0
+      padding: 1.5rem 2.9rem
       
 @media screen and ( max-height: 530px )
   .hero
