--- a/src/sass/templates/_design.sass
+++ b/src/sass/templates/_design.sass
@@ -13,7 +13,15 @@
     margin-right: auto
     max-width: 54.3rem
     text-transform: none
-
+.card 
+  &__design
+    position: relative
+    max-width: 23.6rem
+    margin: 0 auto
+    margin-top: -9.3rem
+    padding: 1.79rem 2.14rem
+    background-color: #fff
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
       
       
   
