--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -89,11 +89,18 @@
     &__subtitle
       max-width: 347px
   .card
+    &__text
+      margin-top: -11.5rem
+      margin-left: 0
+      padding: 1.5rem 2.9rem
     &__design
       max-width: 22.4rem
       margin-top: -12rem
       margin-left: 0
       padding: 1.5rem 2.9rem
+  .types
+    &__card
+      margin-bottom: 6.5rem
       
 @media screen and ( max-height: 530px )
   .hero
