--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -28,6 +28,7 @@ img
       display: flex
       align-items: center
       justify-content: center
+      margin-bottom: 3.3rem
       &::before, &::after
         content: ''
         width: 32px
