--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -67,6 +67,8 @@
     width: 90%
   h2.section-title__heading
     font-size: 1.85rem
+  .section-title__image
+    margin-bottom: 3.3rem
   .title
     margin-top: 3px
     font-size: 23px
