--- a/src/sass/templates/_design.sass
+++ b/src/sass/templates/_design.sass
@@ -1,6 +1,16 @@
 .design
   &__section-title
     margin-bottom: 2.85rem
+  &__pricetag
+    position: absolute
+    left: 0
+    bottom: -1.79rem
+    font-size: 1.29rem
+    font-family: 'Yeseva One', cursive
+    text-transform: uppercase
+    background-color: $primary
+    color: $light
+    padding: 1.1rem 3.7rem
 
   &__subtitle
     font-family: "Futura Book", sans-serif
