--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -90,7 +90,8 @@
       color: $light
     &__subtitle
       max-width: 347px
-      font-size: 1.07rem
+      &--mobile
+        font-size: 1.07rem
   .card
     &__text
       margin-top: -11.5rem
