--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -92,6 +92,7 @@
       max-width: 347px
       &--mobile
         font-size: 1.25rem
+        max-width: 25.6rem
   .card
     &__text
       margin-top: -11.5rem
